--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"description": "Custom authentication plugin for Hapi using Bearer tokens",
 	"version": "0.1.0",
 	"author": "Adri Van Houdt <adri@salesflare.com>",
-	"private": true,
+	"private": false,
 	"main": "index.js",
 	"repository": {
 		"type": "git",
