--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "hapi-auth-bearer",
+	"name": "hapi-auth-bearer-simple",
 	"description": "Custom authentication plugin for Hapi using Bearer tokens",
 	"version": "0.1.0",
 	"author": "Adri Van Houdt <adri@salesflare.com>",
