--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "author": "Adri Van Houdt <adri@salesflare.com>",
   "private": false,
   "main": "index.js",
+  "multiple": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/Salesflare/hapi-auth-bearer-plugin"
   },
   "dependencies": {
     "boom": "^2.6.0",
-    "hoek": "^2.9.0"
+    "hoek": "^2.10.0"
   },
   "peerDependencies": {
-    "hapi": ">=7.x.x < 8.x.x"
+    "hapi": ">=8.x.x < 9.x.x"
   },
   "engines": {
     "node": ">=0.10.33"
