--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "node": ">=0.10.33"
   },
   "scripts": {
-    "test": "mingw32-make test-cov"
+    "test": "make test"
   },
   "bugs": {
     "url": "https://github.com/Salesflare/hapi-auth-bearer-plugin/issues"
