--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "url": "https://github.com/Salesflare/hapi-auth-bearer-plugin"
   },
   "dependencies": {
-    "boom": "2.10.x",
-    "hoek": "2.16.x"
+    "boom": "3.0.x",
+    "hoek": "3.0.x"
   },
   "devDependencies": {
-    "lab": "7.1.0",
-    "code": "1.5.x",
+    "lab": "7.x.x",
+    "code": "2.x.x",
     "hapi": "11.0.x"
   },
   "peerDependencies": {
