--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "hoek": "3.x.x"
   },
   "devDependencies": {
-    "lab": "7.x.x",
+    "lab": "8.x.x",
     "code": "2.x.x",
-    "hapi": "11.x.x"
+    "hapi": ">=11.x.x <=13.x.x"
   },
   "peerDependencies": {
-    "hapi": ">=11.x.x"
+    "hapi": ">=11.x.x <=13.x.x"
   },
   "engines": {
     "node": ">=4.0.0"
