--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
   "devDependencies": {
     "lab": "14.x.x",
     "code": "4.x.x",
-    "hapi": "16.1.x"
+    "hapi": ">=16.1.1"
   },
   "peerDependencies": {
-    "hapi": ">16.1.1"
+    "hapi": ">=16.1.1"
   },
   "engines": {
     "node": ">=4.0.0"
